[gd_scene load_steps=4 format=3 uid="uid://8leq6wo0yvbd"]

[ext_resource type="Script" path="res://scenes/enemy/active_enemy.gd" id="1_kfwt0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77bk4"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_64684"]
radius = 240.0

[node name="ActiveEnemy" type="Area2D" groups=["Radar_Entity"]]
collision_layer = 2
collision_mask = 17
input_pickable = false
script = ExtResource("1_kfwt0")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.517647, 0, 0, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_77bk4")

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_64684")

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
